@@ -2,6 +2,7 @@
 	* Fix dates in change log
 	* Follow-up to t3lib_div::intval_positive not available in TYPO3 6.0 in tx_srfeuserregister_data
 	* Fix issue #39429: usergroups outside pid not saved in edit / invite mode
+	* Ensure the data array is always an array
 
 2013-07-01 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #41827: enableAdminNotifyOnUpdate=1 produces wrong dmailCategories values in E-Mail
